@@ -58,88 +58,111 @@
 		- Tomcat 7 文档：<https://tomcat.apache.org/tomcat-7.0-doc/config/>
 		- Tomcat 8 文档：<https://tomcat.apache.org/tomcat-8.0-doc/config/>
 - 如果你需要查看 Tomcat 的运行状态可以配置tomcat管理员账户，然后登陆 Tomcat 后台进行查看
-- 编辑 /opt/tomcat7/bin/conf/tomcat-users.xml 文件，在里面添加下面信息：
+- 编辑 /opt/tomcat8/bin/conf/tomcat-users.xml 文件，在里面添加下面信息：
+
 ``` xml
-<role rolename="manager"/>
+<role rolename="tomcat"/>
 <role rolename="manager-gui"/>
-<role rolename="admin"/>
-<role rolename="admin-gui"/>
-<user username="tomcat" password="tomcat" roles="admin-gui,admin,manager-gui,manager"/>
+<role rolename="manager-status"/>
+
+<user username="tomcat" password="123456" roles="tomcat,manager-gui,manager-status"/>
 ```
-- 编辑配置文件：`vim /usr/program/tomcat7/conf/server.xml`
-	- 打开默认被注释的连接池配置：
-		- 默认值：
-		``` xml
-	    <!--
-	    <Executor name="tomcatThreadPool" namePrefix="catalina-exec-"
-	        maxThreads="150" minSpareThreads="4"/>
-	    -->
-	    ```
-	    - 修改为：
-	    ``` xml
-	    <Executor
-	            name="tomcatThreadPool"
-	            namePrefix="catalina-exec-"
-	            maxThreads="500"
-	            minSpareThreads="30"
-	            maxIdleTime="60000"
-	            prestartminSpareThreads = "true"
-	            maxQueueSize = "100"
-	    />
-	    ```
-        - 重点参数解释：
-            - maxThreads，最大并发数，默认设置 200，一般建议在 500 ~ 800，根据硬件设施和业务来判断
-            - minSpareThreads，Tomcat 初始化时创建的线程数，默认设置 25
-            - prestartminSpareThreads，在 Tomcat 初始化的时候就初始化 minSpareThreads 的参数值，如果不等于 true，minSpareThreads 的值就没啥效果了
-            - maxQueueSize，最大的等待队列数，超过则拒绝请求
-            - maxIdleTime，如果当前线程大于初始化线程，那空闲线程存活的时间，单位毫秒，默认60000=60秒=1分钟。
-    - 修改默认的链接参数配置：
-        - 默认值：
-        ``` xml
-        <Connector 
-            port="8080" 
-            protocol="HTTP/1.1" 
-            connectionTimeout="20000" 
-            redirectPort="8443" 
-        />
-        ```
-        - 修改为：
-        ``` xml
-        <Connector 
-           executor="tomcatThreadPool"
-           port="8080" 
-           protocol="org.apache.coyote.http11.Http11Nio2Protocol" 
-           connectionTimeout="20000" 
-           maxConnections="1000" 
-           redirectPort="8443" 
-           enableLookups="false" 
-           acceptCount="1000" 
-           maxPostSize="10485760" 
-           maxHttpHeaderSize="8192" 
-           compression="on" 
-           disableUploadTimeout="true" 
-           compressionMinSize="2048" 
-           compressableMimeType="text/html,text/xml,text/plain,text/css,text/javascript,application/javascript" 
-           URIEncoding="utf-8"
-        />
-        ```
-        - 重点参数解释：
-            - protocol，Tomcat 8 设置 nio2 更好：org.apache.coyote.http11.Http11Nio2Protocol（如果这个用不了，就用下面那个）
-            - protocol，Tomcat 6、7 设置 nio 更好：org.apache.coyote.http11.Http11NioProtocol
-            - enableLookups，禁用DNS查询
-            - acceptCount，指定当所有可以使用的处理请求的线程数都被使用时，可以放到处理队列中的请求数，超过这个数的请求将不予处理，默认设置 100
-            - maxPostSize，以 FORM URL 参数方式的 POST 提交方式，限制提交最大的大小，默认是 2097152(2兆)，它使用的单位是字节。10485760 为 10M。如果要禁用限制，则可以设置为 -1。
-            - acceptorThreadCount，用于接收连接的线程的数量，默认值是1。一般这个指需要改动的时候是因为该服务器是一个多核CPU，如果是多核 CPU 一般配置为 2.
-            - maxHttpHeaderSize，http请求头信息的最大程度，超过此长度的部分不予处理。一般8K。
-	- 禁用 AJP（如果你服务器没有使用 Apache） 
-		- 把下面这一行注释掉，默认 Tomcat 是开启的。
-		``` xml
-		<!-- <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" /> -->
-		```
+- 编辑配置文件：`vim /usr/program/tomcat8/conf/server.xml`
 
+#### 打开默认被注释的连接池配置
 
+- 默认值：
 
-## JVM 优化
+``` xml
+<!--
+<Executor name="tomcatThreadPool" namePrefix="catalina-exec-"
+    maxThreads="150" minSpareThreads="4"/>
+-->
+```
+
+- 修改为：
+
+``` xml
+<Executor
+        name="tomcatThreadPool"
+        namePrefix="catalina-exec-"
+        maxThreads="500"
+        minSpareThreads="30"
+        maxIdleTime="60000"
+        prestartminSpareThreads = "true"
+        maxQueueSize = "100"
+/>
+```
+
+- 重点参数解释：
+    - maxThreads，最大并发数，默认设置 200，一般建议在 500 ~ 800，根据硬件设施和业务来判断
+    - minSpareThreads，Tomcat 初始化时创建的线程数，默认设置 25
+    - prestartminSpareThreads，在 Tomcat 初始化的时候就初始化 minSpareThreads 的参数值，如果不等于 true，minSpareThreads 的值就没啥效果了
+    - maxQueueSize，最大的等待队列数，超过则拒绝请求
+    - maxIdleTime，如果当前线程大于初始化线程，那空闲线程存活的时间，单位毫秒，默认60000=60秒=1分钟。
+
+#### 修改默认的链接参数配置
+
+- 默认值：
+
+``` xml
+<Connector 
+    port="8080" 
+    protocol="HTTP/1.1" 
+    connectionTimeout="20000" 
+    redirectPort="8443" 
+/>
+```
+
+- 修改为：
+
+``` xml
+<Connector 
+   executor="tomcatThreadPool"
+   port="8080" 
+   protocol="org.apache.coyote.http11.Http11Nio2Protocol" 
+   connectionTimeout="20000" 
+   maxConnections="10000" 
+   redirectPort="8443" 
+   enableLookups="false" 
+   acceptCount="100" 
+   maxPostSize="10485760" 
+   maxHttpHeaderSize="8192" 
+   compression="on" 
+   disableUploadTimeout="true" 
+   compressionMinSize="2048" 
+   compressableMimeType="text/html,text/xml,text/plain,text/css,text/javascript,application/javascript" 
+   URIEncoding="utf-8"
+/>
+```
+
+- 重点参数解释：
+    - protocol，Tomcat 8 设置 nio2 更好：org.apache.coyote.http11.Http11Nio2Protocol（如果这个用不了，就用下面那个）
+    - protocol，Tomcat 6、7 设置 nio 更好：org.apache.coyote.http11.Http11NioProtocol
+    - enableLookups，禁用DNS查询，tomcat 8 默认已经是禁用了。
+    - maxConnections，最大连接数，tomcat 8 默认设置 10000
+    - acceptCount，指定当所有可以使用的处理请求的线程数都被使用时，可以放到处理队列中的请求数，超过这个数的请求将不予处理，默认设置 100
+    - maxPostSize，以 FORM URL 参数方式的 POST 提交方式，限制提交最大的大小，默认是 2097152(2兆)，它使用的单位是字节。10485760 为 10M。如果要禁用限制，则可以设置为 -1。
+    - maxHttpHeaderSize，http请求头信息的最大程度，超过此长度的部分不予处理。一般8K。
+- 禁用 AJP（如果你服务器没有使用 Apache） 
+	- 把下面这一行注释掉，默认 Tomcat 是开启的。
+
+``` xml
+<!-- <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" /> -->
+```
+
+- 关闭自动部署功能：
+- 旧值：
+```
+<Host name="localhost"  appBase="webapps" unpackWARs="true" autoDeploy="true">
+```
+
+- 新值：
+```
+<Host name="localhost"  appBase="webapps" unpackWARs="true" autoDeploy="false">
+```
+
+## JVM 优化（JDK 8）
 
 - 模型资料来源：<http://xmuzyq.iteye.com/blog/599750>
 - 配比资料：<http://www.jianshu.com/p/d45e12241af4>
@@ -150,7 +173,7 @@
 	- Tenured，终身代。Tenured 区主要保存生命周期长的对象，一般是一些老的对象，当一些对象在 Young 复制转移一定的次数以后，对象就会被转移到 Tenured 区，一般如果系统中用了 application 级别的缓存，缓存中的对象往往会被转移到这一区间。
 	- Perm，永久代。主要保存 class,method,filed 对象，这部门的空间一般不会溢出，除非一次性加载了很多的类，不过在涉及到热部署的应用服务器的时候，有时候会遇到 java.lang.OutOfMemoryError : PermGen space 的错误，造成这个错误的很大原因就有可能是每次都重新部署，但是重新部署后，类的 class 没有被卸载掉，这样就造成了大量的 class 对象保存在了 perm 中，这种情况下，一般重新启动应用服务器可以解决问题。
 - Linux 修改 /usr/program/tomcat7/bin/catalina.sh 文件，把下面信息添加到文件第一行。
-	- 如果服务器只运行一个 Tomcat
+	- 如果服务器只运行一个 Tomcat，堆栈信息可以这样配置：
 		- 机子内存如果是 4G：
 			- `CATALINA_OPTS="-Dfile.encoding=UTF-8 -server -Xms2g -Xmx2g"`
 		- 机子内存如果是 8G：
@@ -163,21 +186,8 @@
 		- `-Xms2g -Xmx2g`
 	- 如果是 16G 开发机
 		- `-Xms4g -Xmx4g`
-	- 参数说明：
-	``` nginx 
-	-Dfile.encoding：默认文件编码
-	-server：表示这是应用于服务器的配置，JVM 内部会有特殊处理的
-	-Xmx1024m：设置JVM最大可用内存为1024MB
-	-Xms1024m：设置JVM最小内存为1024m。此值可以设置与-Xmx相同，以避免每次垃圾回收完成后JVM重新分配内存。
-	-Xmn1024m：设置JVM新生代大小（JDK1.4之后版本）。一般-Xmn的大小是-Xms的1/2左右，不要设置的过大或过小，过大导致老年代变小，频繁Full GC，过小导致minor GC频繁。如果不设置-Xmn，可以采用-XX:NewRatio=2来设置，也是一样的效果
-	-XX:NewSize：设置新生代大小
-	-XX:MaxNewSize：设置最大的新生代大小
-	-XX:PermSize：设置永久代大小（在 Tomcat8 移出了该参数）
-	-XX:MaxPermSize：设置最大永久代大小（在 Tomcat8 移出了该参数）
-	-XX:NewRatio=4：设置年轻代（包括 Eden 和两个 Survivor 区）与终身代的比值（除去永久代）。设置为 4，则年轻代与终身代所占比值为 1：4，年轻代占整个堆栈的 1/5
-	-XX:MaxTenuringThreshold=10：设置垃圾最大年龄，默认为：15。如果设置为 0 的话，则年轻代对象不经过 Survivor 区，直接进入年老代。对于年老代比较多的应用，可以提高效率。如果将此值设置为一个较大值，则年轻代对象会在 Survivor 区进行多次复制，这样可以增加对象再年轻代的存活时间，增加在年轻代即被回收的概论。需要注意的是，设置了 -XX:MaxTenuringThreshold，并不代表着，对象一定在年轻代存活15次才被晋升进入老年代，它只是一个最大值，事实上，存在一个动态计算机制，计算每次晋入老年代的阈值，取阈值和MaxTenuringThreshold中较小的一个为准。
-	-XX:+DisableExplicitGC：这个将会忽略手动调用 GC 的代码使得 System.gc() 的调用就会变成一个空调用，完全不会触发任何 GC
-	```
+	- 还有一个参数：`-XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=1024M`
+		- 这个调试来确认什么值合适。
 - Windows 修改 /tomcat7/bin/catalina.bat 文件，找到这一行：`echo Using CATALINA_BASE:   "%CATALINA_BASE%"`，然后在其上面添加如下内容，此方法只对解压版的 Tomcat 有效果，对于安装版本的需要点击安装后任务栏上的那个 Tomcat 图标，打开配置中有一个 `Java` Tab 的进行编辑。
 ``` nginx
 set JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding="UTF-8" -Dsun.jnu.encoding="UTF8" -Ddefault.client.encoding="UTF-8" -Duser.language=Zh
